docs-archive/apache-airflow-providers-amazon/9.17.0/_sources/_api/airflow/providers/amazon/aws/operators/ssm/index.rst.txt
airflow.providers.amazon.aws.operators.ssm
==========================================

.. py:module:: airflow.providers.amazon.aws.operators.ssm


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.operators.ssm.SsmRunCommandOperator
   airflow.providers.amazon.aws.operators.ssm.SsmGetCommandInvocationOperator


Module Contents
---------------

.. py:class:: SsmRunCommandOperator(*, document_name, run_command_kwargs = None, wait_for_completion = True, waiter_delay = 120, waiter_max_attempts = 75, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.ssm.SsmHook`\ ]


   Executes the SSM Run Command to perform actions on managed instances.

   .. seealso::
       For more information on how to use this operator, take a look at the
       guide:
       :ref:`howto/operator:SsmRunCommandOperator`

   :param document_name: The name of the Amazon Web Services Systems Manager
       document (SSM document) to run.
   :param run_command_kwargs: Optional parameters to pass to the send_command
       API.

   :param wait_for_completion: Whether to wait for cluster to stop.
       (default: True)
   :param waiter_delay: Time in seconds to wait between status checks.
       (default: 120)
   :param waiter_max_attempts: Maximum number of attempts to check for job
       completion. (default: 75)
   :param deferrable: If True, the operator will wait asynchronously for the
       cluster to stop. This implies waiting for completion. This mode
       requires aiobotocore module to be installed. (default: False)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used.
       If running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default
       boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore
       client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: wait_for_completion
      :value: True



   .. py:attribute:: waiter_delay
      :value: 120



   .. py:attribute:: waiter_max_attempts
      :value: 75



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: document_name


   .. py:attribute:: run_command_kwargs


   .. py:method:: execute_complete(context, event = None)


   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: SsmGetCommandInvocationOperator(*, command_id, instance_id = None, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.operators.base_aws.AwsBaseOperator`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.ssm.SsmHook`\ ]


   Retrieves the output and execution details of an SSM command invocation.

   This operator allows you to fetch the standard output, standard error,
   execution status, and other details from SSM commands. It can be used to
   retrieve output from commands executed by SsmRunCommandOperator in previous
   tasks, or from commands executed outside of Airflow entirely.

   The operator returns structured data including stdout, stderr, execution
   times, and status information for each instance that executed the command.

   .. seealso::
       For more information on how to use this operator, take a look at the
       guide:
       :ref:`howto/operator:SsmGetCommandInvocationOperator`

   :param command_id: The ID of the SSM command to retrieve output for.
   :param instance_id: The ID of the specific instance to retrieve output
       for. If not provided, retrieves output from all instances that
       executed the command.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used.
       If running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default
       boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore
       client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]


   .. py:attribute:: command_id


   .. py:attribute:: instance_id
      :value: None



   .. py:method:: execute(context)

      Execute the operator to retrieve command invocation output.



